# solo12_interface

./: README.md
master_board_sdk/: CMakeLists.txt  package.xml
master_board_sdk/src/: Link_manager.cpp
rbt_pd_cnt/: CMakeLists.txt
rbt_pd_cnt/include/rbt_pd_cnt/: real_pd_cnt.hpp
rbt_pd_cnt/src/: real_pd_cnt.cpp
solo12_interface/: CMakeLists.txt  package.xml  solo12_interface.xml
solo12_interface/include/solo12_interface/: leg_interface.hpp  wb_interface.hpp
solo12_interface/src/: leg_interface.cpp  wb_interface.cpp
solo12_sim/: CMakeLists.txt  package.xml
solo12_sim/config/: base_config.yaml  champ_cntr_step0.yaml  control_PD.yaml  control_step_0.yaml  control_step_1.yaml  leg_control.yaml  wb_solo_control.yaml
solo12_sim/launch/: PD_controller_.launch.py  control_step_0.launch.py  control_step_0_with_broadcaster.launch.py  interface.launch.py  interface_and_control.launch.py  joint_state_controller.laumch.py  real_leg_interface.launch.py  real_leg_interface_ref_gen.launch.py
